mkdocs-material-2.5.5 (2018-01-31)

  * Added Hungarian translations

mkdocs-material-2.5.4 (2018-01-29)

  * Fixed #683: gh-deploy fails inside Docker

mkdocs-material-2.5.3 (2018-01-25)

  * Added Ukrainian translations

mkdocs-material-2.5.2 (2018-01-22)

  * Added default search language mappings for all localizations
  * Fixed #673: Error loading non-existent search language
  * Fixed #675: Uncaught reference error when search plugin disabled

mkdocs-material-2.5.1 (2018-01-20)

  * Fixed permalink for main headline
  * Improved missing translation handling with English as a fallback
  * Improved accessibility with skip-to-content link

mkdocs-material-2.5.0 (2018-01-13)

  * Added support for right-to-left languages

mkdocs-material-2.4.0 (2018-01-11)

  * Added focus state for clipboard buttons
  * Fixed #400: Search bar steals tab focus
  * Fixed search not closing on ENTER when result is selected
  * Fixed search not closing when losing focus due to TAB
  * Fixed collapsed navigation links getting focus
  * Fixed outline being cut off on TAB focus of navigation links
  * Fixed bug with first search result navigation being ignored
  * Removed search result navigation via TAB (use UP and DOWN)
  * Removed outline resets for links
  * Improved general tabbing behavior on desktop

mkdocs-material-2.3.0 (2018-01-09)

  * Added example (synonym: snippet) style for Admonition
  * Added synonym abstract for summary style for Admonition

mkdocs-material-2.2.6 (2017-12-27)

  * Added Turkish translations
  * Fixed unclickable area below header in case JavaScript is not available

mkdocs-material-2.2.5 (2017-12-18)

  * Fixed #639: Broken default favicon

mkdocs-material-2.2.4 (2017-12-18)

  * Fixed #638: Build breaks with Jinja < 2.9

mkdocs-material-2.2.3 (2017-12-13)

  * Fixed #630: Admonition sets padding on any last child
  * Adjusted Chinese (Traditional) translations

mkdocs-material-2.2.2 (2017-12-08)

  * Added Dutch translations