@@ -1,0 +1,21 @@
+{% macro t(key) %}{{ {
+  "language": "fa",
+  "direction": "rtl",
+  "clipboard.copy": "کپی کردن",
+  "clipboard.copied": "کپی شد",
+  "edit.link.title": "این صفحه را ویرایش کنید",
+  "footer.previous": "قبلی",
+  "footer.next": "بعدی",
+  "meta.comments": "نظرات",
+  "meta.source": "منبع",
+  "search.language": "en",
+  "search.placeholder": "جستجو",
+  "search.result.placeholder": "برای شروع جستجو تایپ کنید",
+  "search.result.none": "سندی یافت نشد",
+  "search.result.one": "1 سند یافت شد",
+  "search.result.other": "# سند یافت شد",
+  "search.tokenizer": "[\s]+",
+  "skip.link.title": "پرش به محتویات",
+  "source.link.title": "رفتن به مخزن",
+  "toc.title": "فهرست موضوعات"
+}[key] }}{% endmacro %}
