@@ -1,3 +1,7 @@
+mkdocs-material-2.5.6 (2018-02-xx)
+
+  * Added Persian translations
+
 mkdocs-material-2.5.5 (2018-01-31)
 
   * Added Hungarian translations
